package edu.fiuba.algo3.modelo.jugador;


/**
* @generated
*/
public class Caso {
    
    /**
    * @generated
    */
    private invalid sospechosos;
    
    /**
    * @generated
    */
    private invalid Ladron;
    
    
    /**
    * @generated
    */
    private Ladron ;
    
    /**
    * @generated
    */
    private Set<Sospechable> sospechable;
    
    /**
    * @generated
    */
    private Objeto ;
    
    /**
    * @generated
    */
    private Estrategia ;
    
    
    /**
    * @generated
    */
    public invalid getSospechosos() {
        return this.sospechosos;
    }
    
    /**
    * @generated
    */
    public invalid setSospechosos(invalid sospechosos) {
        this.sospechosos = sospechosos;
    }
    
    /**
    * @generated
    */
    public invalid getLadron() {
        return this.Ladron;
    }
    
    /**
    * @generated
    */
    public invalid setLadron(invalid Ladron) {
        this.Ladron = Ladron;
    }
    
    
    /**
    * @generated
    */
    public Ladron get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Ladron set(Ladron ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Estrategia get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Estrategia set(Estrategia ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Sospechable getSospechable() {
        return this.sospechable;
    }
    
    /**
    * @generated
    */
    public Sospechable setSospechable(Sospechable sospechable) {
        this.sospechable = sospechable;
    }
    
    /**
    * @generated
    */
    public Objeto get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Objeto set(Objeto ) {
        this. = ;
    }
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public BuscarSospechoso() {
        //TODO
    }
    
}
