package edu.fiuba.algo3.modelo.jugador;


/**
* @generated
*/
public class Computadora {
    
    
    /**
    * @generated
    */
    private Jugador ;
    
    
    
    /**
    * @generated
    */
    public Jugador get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Jugador set(Jugador ) {
        this. = ;
    }
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public BuscarSospechoso() {
        //TODO
    }
    /**
    * @generated
    */
    public establecerSexo() {
        //TODO
    }
    /**
    * @generated
    */
    public establecerHobby() {
        //TODO
    }
    /**
    * @generated
    */
    public establecerCabello() {
        //TODO
    }
    
}
