package edu.fiuba.algo3.modelo.jugador;


/**
* @generated
*/
public class Jugador {
    
    /**
    * @generated
    */
    private String nombre;
    
    /**
    * @generated
    */
    private Integer arrestos;
    
    
    /**
    * @generated
    */
    private Computadora ;
    
    /**
    * @generated
    */
    private Reloj ;
    
    /**
    * @generated
    */
    private Juego ;
    
    /**
    * @generated
    */
    private GradoPolica ;
    
    /**
    * @generated
    */
    private Orden ;
    
    /**
    * @generated
    */
    private Ciudad ;
    
    
    /**
    * @generated
    */
    public String getNombre() {
        return this.nombre;
    }
    
    /**
    * @generated
    */
    public String setNombre(String nombre) {
        this.nombre = nombre;
    }
    
    /**
    * @generated
    */
    public Integer getArrestos() {
        return this.arrestos;
    }
    
    /**
    * @generated
    */
    public Integer setArrestos(Integer arrestos) {
        this.arrestos = arrestos;
    }
    
    
    /**
    * @generated
    */
    public Orden get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Orden set(Orden ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public GradoPolica get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public GradoPolica set(GradoPolica ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Reloj get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Reloj set(Reloj ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Ciudad get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Ciudad set(Ciudad ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Juego get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Juego set(Juego ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Computadora get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Computadora set(Computadora ) {
        this. = ;
    }
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public visitarEdificio() {
        //TODO
    }
    /**
    * @generated
    */
    public viajarACiudad() {
        //TODO
    }
    /**
    * @generated
    */
    public BuscarSospechoso() {
        //TODO
    }
    /**
    * @generated
    */
    public ArrestarSospechoso() {
        //TODO
    }
    /**
    * @generated
    */
    public TerminarJuego() {
        //TODO
    }
    
}
