package edu.fiuba.algo3.modelo.jugador;


/**
* @generated
*/
public class Orden implements Orden {
    
    
    
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public ArrestarSospechos() {
        //TODO
    }
    
}
