package edu.fiuba.algo3.modelo.jugador;


/**
* @generated
*/
public class Reloj {
    
    /**
    * @generated
    */
    private Integer horasRestantes;
    
    /**
    * @generated
    */
    private Integer horasPordia;
    
    
    /**
    * @generated
    */
    private Jugador ;
    
    
    /**
    * @generated
    */
    public Integer getHorasRestantes() {
        return this.horasRestantes;
    }
    
    /**
    * @generated
    */
    public Integer setHorasRestantes(Integer horasRestantes) {
        this.horasRestantes = horasRestantes;
    }
    
    /**
    * @generated
    */
    public Integer getHorasPordia() {
        return this.horasPordia;
    }
    
    /**
    * @generated
    */
    public Integer setHorasPordia(Integer horasPordia) {
        this.horasPordia = horasPordia;
    }
    
    
    /**
    * @generated
    */
    public Jugador get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Jugador set(Jugador ) {
        this. = ;
    }
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public ataqueConPistola() {
        //TODO
    }
    /**
    * @generated
    */
    public ataqueConCuchillo() {
        //TODO
    }
    /**
    * @generated
    */
    public descontarViaje() {
        //TODO
    }
    /**
    * @generated
    */
    public visitarEdificio() {
        //TODO
    }
    /**
    * @generated
    */
    public tiempoTerminado() {
        //TODO
    }
    /**
    * @generated
    */
    public dormir() {
        //TODO
    }
    
}
