package edu.fiuba.algo3.modelo.ladron;


/**
* @generated
*/
public class Ladron implements Sospechable, Ladron {
    
    /**
    * @generated
    */
    private invalid Caracteristicas;
    
    
    /**
    * @generated
    */
    private Caso ;
    
    /**
    * @generated
    */
    private Estrategia ;
    
    /**
    * @generated
    */
    private Ciudad ;
    
    
    /**
    * @generated
    */
    public invalid getCaracteristicas() {
        return this.Caracteristicas;
    }
    
    /**
    * @generated
    */
    public invalid setCaracteristicas(invalid Caracteristicas) {
        this.Caracteristicas = Caracteristicas;
    }
    
    
    /**
    * @generated
    */
    public Caso get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Caso set(Caso ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Estrategia get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Estrategia set(Estrategia ) {
        this. = ;
    }
    
    /**
    * @generated
    */
    public Ciudad get() {
        return this.;
    }
    
    /**
    * @generated
    */
    public Ciudad set(Ciudad ) {
        this. = ;
    }
    

    //                          Operations                                  
    
    /**
    * @generated
    */
    public Arrestar() {
        //TODO
    }
    /**
    * @generated
    */
    public Sospechar() {
        //TODO
    }
    
}
